# sandbox

./: .bazelrc  MODULE.bazel  compile_commands.txt  compile_flags.txt
cache/: animate.txt
cache/benches/: cache_bench.cpp
intern/: BUILD  intern_list.cpp  intern_list.hpp
intern/benches/: intern_bench.cpp
intern/tests/: intern_test.cpp  test_utils.cpp  test_utils.hpp
